Fixed spacing issue, experience delays, hints CSS on Rotating Bezel page

--- a/client/src/scss/sections/intuitive-experience/_styles.scss
+++ b/client/src/scss/sections/intuitive-experience/_styles.scss
@@ -21,6 +21,9 @@ and open the template in the editor.
                 position: relative;
 
                 &.slider-wrapper {
+                    > div {
+                        height: inherit;
+                    }
                     .slider-container {
                         .slick-list {
                             .slick-track {
